cis-perf/template/deploysingle.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: REPLACEMENT_APP_NAME
  name: REPLACEMENT_APP_NAME
  namespace: REPLACEMENT_NAMESPACE
spec:
  replicas: 2
  selector:
    matchLabels:
      app: REPLACEMENT_APP_NAME
  template:
    metadata:
      labels:
        app: REPLACEMENT_APP_NAME
    spec:
      containers:
      - image: REPLACEMENT_BACKEND_IMAGE
        name: backend
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    cis.f5.com/as3-tenant: REPLACEMENT_NAMESPACE
    cis.f5.com/as3-app: REPLACEMENT_NAMESPACE_REPLACEMENT_SVC_NAME
    cis.f5.com/as3-pool: REPLACEMENT_NAMESPACE_REPLACEMENT_SVC_NAME_pool
  name: REPLACEMENT_SVC_NAME
  namespace: REPLACEMENT_NAMESPACE
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: REPLACEMENT_APP_NAME
  sessionAffinity: None
  type: ClusterIP
