cis-perf/template/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: REPLACEMENT_NAMESPACE
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
    virtual-server.f5.com/partition: "k8s"
spec:
  rules:
  - host: REPLACEMENT_NAMESPACE.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
